--- a/fe/templates/header.html
+++ b/fe/templates/header.html
@@ -9,7 +9,7 @@
     header {
         background-color: #0074D9;
         color: white;
-        padding: 20px;
+        padding: 1px 20px;
         text-align: center;
         font-size: 1.8rem;
     }
